[tool.poetry]
name = "robot-framework-lab"
version = "0.1.0"
description = ""
authors = ["RTae <natthanan.bhu@doctorasa.co>"]
readme = "README.md"
packages = [{include = "robot_framework_lab"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
